# yal

./: .gitignore  README.md  package.json
.github/workflows/: build.yml
apps/yal/: .gitignore  LICENCE.md  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/yal/scripts/: darwinBins.sh  install-yal.ts
apps/yal/src/: app.css  declarations.d.ts  index.tsx  types.ts
apps/yal/src-tauri/: Cargo.toml  tauri.conf.json
apps/yal/src-tauri/icons/: icon.icns
apps/yal/src-tauri/src/: accessibility.rs  app_icons.rs  config.rs  dotfiles.rs  hide_show_app.rs  main.rs  utils.rs  which.rs
apps/yal/src/components/: Alert.tsx  App.tsx  Input.tsx  Markdown.tsx  Result.tsx  ResultApp.tsx  ResultIcon.tsx  Results.tsx
apps/yal/src/plugins/: app-test.ts  apps.ts  config.ts  file-search.ts  icons-viewer.ts  keywords.ts  reindex-apps.ts  reload.ts  system.ts  tester.ts  theme-tester.ts  themes.ts  toast-tester.ts
apps/yal/src/state/: apps.ts  config.ts  input.ts  misc.ts  plugin-dev-mode.ts  plugins.ts  results.ts  theme.ts  toast.ts
apps/yal/src/utils/: constants.ts  db.ts  debounce.ts  dotfile-server.ts  filter-results.ts  highlight.ts  keyboard.ts  plugin-actions.ts  setup.ts  tailwind-compile.ts  (+3 more)
package/cli/: README.md  package.json  tsconfig.json
package/cli/esbuild/: plugin-installer.ts  plugin-server.ts
package/cli/src/: index.ts  package-json-template.ts  template.ts  types.ts
package/themes/: install-themes.ts  package.json
package/themes/src/: colbolt-2.json  dracula.json  green.json  gruvbox.json  nord.json  shades-of-purple.json  temp.json
package/types/: .npmignore  README.md  index.ts  package.json  pluginActions.ts  tsconfig.json
resources/: logo.afphoto
(+12 files in other folders)
